--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
+        "@popperjs/core": "^2.11.8",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "bootstrap": "^5.3.3",
         "core-js": "^3.23.0",
         "file-loader": "^6.2.0",
         "jquery": "^3.7.1",
